--- a/src/app/pages/home/modals/criar-contrato/criar-contrato.component.html
+++ b/src/app/pages/home/modals/criar-contrato/criar-contrato.component.html
@@ -1,139 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Formulário de Contrato</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-modal #modal>
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Criar Contrato</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="closeModal()">Fechar</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
 
-<ion-content>
-  <form [formGroup]="contractForm" (ngSubmit)="onSubmit()">
-    <!-- Número do Contrato -->
-    <ion-item>
-      <ion-label position="floating">Número do Contrato</ion-label>
-      <ion-input
-        type="number"
-        formControlName="contractNumber"
-        placeholder="Digite o número do contrato"
-      ></ion-input>
-    </ion-item>
-    <ion-note
-      *ngIf="
-        contractForm.get('contractNumber')?.invalid &&
-        contractForm.get('contractNumber')?.touched
-      "
-      color="danger"
-    >
-      Número do contrato é obrigatório e deve ser maior que 0.
-    </ion-note>
-
-    <!-- Status -->
-    <ion-item>
-      <ion-label>Status</ion-label>
-      <ion-select formControlName="status" placeholder="Selecione o status">
-        <ion-select-option
-          *ngFor="let option of statusOptions"
-          [value]="option"
-        >
-          {{ option }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-note
-      *ngIf="contractForm.get('status')?.invalid && contractForm.get('status')?.touched"
-      color="danger"
-    >
-      O status é obrigatório.
-    </ion-note>
-
-    <!-- Data Inicial -->
-    <ion-item>
-      <ion-label position="floating">Data Inicial</ion-label>
-      <ion-datetime formControlName="dataInicial"></ion-datetime>
-    </ion-item>
-    <ion-note
-      *ngIf="
-        contractForm.get('dataInicial')?.invalid &&
-        contractForm.get('dataInicial')?.touched
-      "
-      color="danger"
-    >
-      A data inicial é obrigatória.
-    </ion-note>
-
-    <!-- Data Final -->
-    <ion-item>
-      <ion-label position="floating">Data Final</ion-label>
-      <ion-datetime formControlName="dataFinal"></ion-datetime>
-    </ion-item>
-    <ion-note
-      *ngIf="
-        contractForm.get('dataFinal')?.invalid &&
-        contractForm.get('dataFinal')?.touched
-      "
-      color="danger"
-    >
-      A data final é obrigatória.
-    </ion-note>
-
-    <!-- Empresa -->
-    <ion-item>
-      <ion-label>Empresa</ion-label>
-      <ion-select formControlName="empresaId" placeholder="Selecione a empresa">
-        <ion-select-option
-          *ngFor="let empresa of empresas"
-          [value]="empresa.id"
-        >
-          {{ empresa.nome }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-note
-      *ngIf="contractForm.get('empresaId')?.invalid && contractForm.get('empresaId')?.touched"
-      color="danger"
-    >
-      A empresa é obrigatória.
-    </ion-note>
-
-    <!-- Operadora -->
-    <ion-item>
-      <ion-label>Operadora</ion-label>
-      <ion-select
-        formControlName="operadoraId"
-        placeholder="Selecione a operadora"
-      >
-        <ion-select-option
-          *ngFor="let operadora of operadoras"
-          [value]="operadora.id"
-        >
-          {{ operadora.nome }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-note
-      *ngIf="contractForm.get('operadoraId')?.invalid && contractForm.get('operadoraId')?.touched"
-      color="danger"
-    >
-      A operadora é obrigatória.
-    </ion-note>
-
-    <!-- Plano -->
-    <ion-item>
-      <ion-label>Plano</ion-label>
-      <ion-select formControlName="planoId" placeholder="Selecione o plano">
-        <ion-select-option *ngFor="let plano of planos" [value]="plano.id">
-          {{ plano.nome }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-note
-      *ngIf="contractForm.get('planoId')?.invalid && contractForm.get('planoId')?.touched"
-      color="danger"
-    >
-      O plano é obrigatório.
-    </ion-note>
-
-    <!-- Botão Enviar -->
-    <ion-button expand="block" type="submit" [disabled]="contractForm.invalid">
-      Enviar
-    </ion-button>
-  </form>
-</ion-content>
+    <ion-content>
+      <app-contract-form (submitForm)="saveContract($event)"></app-contract-form>
+    </ion-content>
+  </ng-template>
+</ion-modal>
