refactore: logic to create/save contract in home page. Now home have the control of page - save contract, open modal, get contracts, redirect to contract/:id page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -25,7 +25,7 @@
   </ion-list>
 
   <!-- Modal de Criação de Contrato -->
-  <app-criar-contrato #modalCriarContrato (contractCreated)="onContractCreated()"></app-criar-contrato>
+  <app-contract-modal #modalCriarContrato (submitForm)="saveContract($event)"></app-contract-modal>
 
   <!-- Estado vazio -->
   <ng-template #emptyState>
